--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 header {
     background-color: #333;
@@ -12,6 +15,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 #logo {
     max-height: 50px; /* Ajusta la altura del logo */
@@ -28,14 +32,10 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
-#cart {
-    margin-top: 10px;
-    font-size: 18px;
-}
 main {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
 }
 .product {
@@ -74,3 +74,5 @@ button:hover {
     width: 100%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
+
+   
